--- a/styles.css
+++ b/styles.css
@@ -73,16 +73,66 @@ body {
 
 .above-form-text {
     display: flex;
-    height: 2em;
+    align-items: end;
+    height: 7.2em;
+    color: #292929;
+    padding-left: 1.5em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .form-box {
     display: flex;
-    border: 1px solid black;
-    width: 65%;
-    box-shadow: red 10px 10px;
+    flex-direction: column;
+    background-color: white;
+
+    width: 100%;
+    height: 30%;
+    box-shadow: #E5E7EB 0px .4em;
+    flex-grow: 0;
+    padding-left: 3em;
+}
+
+.heading {
+    margin-top: .7em;
+    font-size: 1.7em;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+}
+
+form {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color: #454545;
+    font-size: .8em;
+    font-weight: bold;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    height: 85%;
+    width: 100%;
+    flex-grow: 0;
+}
+
+form div {
+    margin-top: 2em;
+}
+
+form div input {
+    margin-top: 0.5em;
+    height: 2.5em;
+    width: 20em;
+    border-radius: .4em;
+    border-color: #E5E7EB;
+    border-style: solid;
 }
 
 .create-account {
     height: 18em;
+}
+
+.create-account button {
+    margin-left: 4em;
+}
+
+.log-in-text {
+    
 }
