--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    flex-shrink: 0;
+
     width: 35%;
 }
 
@@ -36,7 +36,7 @@ body {
     background-color: rgba(0, 0, 0, 10);
     width: 35%;
     height: 10em;
-    top: 12em;
+    top: 14em;
     opacity: 40%;
 }
 
@@ -45,9 +45,9 @@ body {
     justify-content: center;
     align-items: center;
     position: absolute;
-    width: 40em;
+    width: 35%;
     height: 10em;
-    top: 12em;
+    top: 14em;
     color: white;
     font-family: Norse-Bold;
 }
@@ -66,7 +66,7 @@ body {
 .right-side {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+
     background-color: #ededed;
     width: 65%;
 }
@@ -74,8 +74,9 @@ body {
 .above-form-text {
     display: flex;
     align-items: end;
-    height: 7.2em;
+    height: 10em;
     color: #292929;
+    padding-bottom: 2em;
     padding-left: 1.5em;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -84,11 +85,10 @@ body {
     display: flex;
     flex-direction: column;
     background-color: white;
-
     width: 100%;
     height: 30%;
     box-shadow: #E5E7EB 0px .4em;
-    flex-grow: 0;
+
     padding-left: 3em;
 }
 
@@ -109,7 +109,7 @@ form {
     flex-direction: column;
     height: 85%;
     width: 100%;
-    flex-grow: 0;
+
 }
 
 form div {
@@ -125,14 +125,44 @@ form div input {
     border-style: solid;
 }
 
+.password:invalid {
+    border-color: red;
+}
+
+.confirmpass:invalid {
+    border-color: red;
+}
+
 .create-account {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     height: 18em;
 }
 
 .create-account button {
+    margin-top: 0;
     margin-left: 4em;
+    width: 17em;
+    height: 4em;
+    background-color: #596D48;
+    border-radius: .5em;
+    border-style: none;
+    margin-top: 2em;
+    color: white;
+    font-weight: bold;
+    font-size: 1em;
+    cursor: pointer;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.create-account button:focus {
+    outline: 2px solid black;
+    outline-offset: 2px;
 }
 
 .log-in-text {
-    
+    margin-left: 4em;
+    margin-top: 1em;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
